# stratoseer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_structured_profile_fields.py  003_add_event_attendance.py  004_drop_learning_budget_and_time_commitment.py  005_store_cv_in_database.py  008_add_users_auth_tables.py  009_add_cv_summary_cache.py  010_unique_profile_name_per_owner.py  011_drop_experience_level.py  012_preferred_title_singular.py  3229cb27c095_default_event_attendance_to_no_.py  a68f0bc2edf8_move_audit_logs_and_bundles_from_disk_.py  e9bacf5ec5f4_add_event_topics_column_to_user_profiles.py  f1b31de28cff_add_user_api_key_and_free_runs_used.py
app/: config.py  db.py  main.py  sse.py
app/agents/: base.py  ceo.py  ceo_agent.py  cert_scout_extractor.py  cert_scout_retriever.py  cfo.py  cfo_agent.py  coordinator.py  cover_letter_agent.py  data_formatter.py  factory.py  goal_extractor.py  job_scout_extractor.py  job_scout_retriever.py  schemas.py  trends_scout_extractor.py  trends_scout_retriever.py  url_validator.py  web_scraper.py
app/api/: admin.py  audit.py  auth.py  cover_letters.py  error_messages.py  profiles.py  results.py  runs.py
app/auth/: dependencies.py  email.py  jwt.py  oauth.py  password.py  rate_limit.py
app/engine/: __init__.py  audit_writer.py  content_validator.py  diff.py  policy_engine.py  replay.py  token_tracker.py  verifier.py
app/graphs/: cover_letter.py  daily.py  log.py  state.py  weekly.py
app/llm/: search_tool.py  url_fetch_tool.py
app/models/: __init__.py  audit_event.py  certification.py  course.py  cover_letter.py  event.py  evidence.py  group.py  job_opportunity.py  opportunity.py  profile.py  refresh_token.py  run.py  run_bundle.py  trend.py  user.py
app/schemas/: admin.py  auth.py  cover_letter.py  evidence.py  opportunity.py  policy.py  profile.py  run.py  settings.py
app/services/: __init__.py  audit_service.py  auth_service.py  cover_letter_service.py  policy_service.py  (+3 more)
docs/: architecture.drawio
frontend/: vite.config.ts
policy/: boundaries.yaml  budgets.yaml  redaction.yaml  sources.yaml  tools.yaml
prompts/: cover_letter.md  data_formatter.md  goal_extractor.md  url_validator.md
tests/: conftest.py  test_agents.py  test_api_cover_letters.py  test_api_results.py  test_graphs_cover_letter.py  test_graphs_daily.py  test_graphs_weekly.py  test_policy_engine.py  test_replay_diff.py
(+61 files in other folders)
